version/0.13/_sources/api/solver/_autosummary/settings/cross_section_multicomponent_child.rst.txt
:orphan:

.. _cross_section_multicomponent_child:

cross_section_multicomponent_child
==================================

.. autoclass:: ansys.fluent.core.solver.settings_231.cross_section_multicomponent_child.cross_section_multicomponent_child

.. rubric:: Named object type

:ref:`child_object_type_child <child_object_type_child>`


.. rubric:: Included in:

==================================================================   =========================================

Parent                                                                                                 Summary

==================================================================   =========================================
:ref:`cross_section_multicomponent <cross_section_multicomponent>`       'cross_section_multicomponent' child.

==================================================================   =========================================

